# Home_Automation_with_ESP32P4M3_INBUILD_C6

./: README.md
JC1060P470C_I_W/1-Demo/Demo_IDF/examples/lvgl_demo_v9/main/: CMakeLists.txt  ac_screen.c  c6.c  cct_lights.c  data_manager.c  ethernet.c  file.c  header.h  home_screen.c  idf_component.yml  login.c  lower_panel.c  main.c  mid_panel.c  notes.txt  rgb_lights.c  select_n_order.c  top_panel.c
JC1060P470C_I_W/1-Demo/Demo_IDF/examples/lvgl_demo_v9/main/UI/: clock_font_120_bold.c  clock_font_96.c
JC1060P470C_I_W/1-Demo/Demo_IDF/examples/lvgl_demo_v9/main/lower_screen/: lightbulb_off.c  location.c  screen_off.c  secenes.c  settings32.c
JC1060P470C_I_W/1-Demo/Demo_IDF/examples/lvgl_demo_v9/main/ui_ees/: eez-flow.h  fonts.h  images.h  screens.c  screens.h  styles.h  ui.c  ui.h  ui_font_18_bold.c  ui_font_bold_22.c  ui_font_bold_28.c  ui_font_bold_big.c  ui_font_font_32.c  ui_font_urbanist.c  ui_image_3000k_on.c  ui_image_3500k_off.c  ui_image_4000k_on.c  ui_image_6500k_off.c  ui_image_6500k_on.c  ui_image_ac_f_s_fast_on.c  ui_image_ac_fan_sp_auto_img.c  ui_image_ac_img_big_on.c  ui_image_ac_img_main_screen.c  ui_image_ac_on.c  ui_image_accool_off.c  ui_image_achris_off.c  ui_image_acverts_off.c  ui_image_brightness_max_img.c  ui_image_brightness_min.c  ui_image_cct_on.c  ui_image_ceiling_fan_on.c  ui_image_color_circle.c  ui_image_color_picker_change_img.c  ui_image_color_picker_img.c  ui_image_curtain_close_ob_img_big.c  ui_image_curtain_movement_stop_img_cum_but.c  ui_image_curtain_movement_stop_img_cum_but_big.c  ui_image_curtain_open_off_img.c  (+20 more)
(+100 files in other folders)
